<resources>
    <string name="app_name">Cellular Automata</string>
    <string name="login">false</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="open_drawer">Open drawer</string>
    <string name="closed_drawer">closed drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="about_app">About App</string>
    <string name="contributor">Contributor</string>
    <string name="preference_file">PreferenceFile</string>
    <string name="_1_yt_link">1. <u><b>Yt link</b></u></string>
    <string name="_2_yt_link">2. <u><b>Yt link</b></u></string>
    <string name="_3_yt_link">3. <u><b>Yt link</b></u></string>
    <string name="_4_yt_link">4. <u><b>Wikipedia link</b></u></string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="hey_congratulations">Hey, Congratulations!!</string>


</resources>