<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homeFragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"
            />

        <item
            android:id="@+id/nav_dashboardFragment"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_dashboard" />
        <item
            android:id="@+id/nav_searchFragment"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />

        <item
            android:id="@+id/nav_notificationFragment"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications" />
        <item
            android:id="@+id/nav_profileFragment"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/profile" />
    </group>
        <item
            android:id="@+id/contriAboutAppFragment"
            android:title="@string/contributor" />
        <item
            android:id="@+id/nav_AboutApp"
            android:title="@string/about_app" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/log_out" />


</menu>