<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/dashboardFragment"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_dashboard" />
        <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />

        <item
            android:id="@+id/notificationFragment"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/profile" />
    </group>


</menu>