<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragments.MaterialDisplayFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/textShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="fill"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Links: "
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textShow"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textShow"
            app:layout_constraintTop_toBottomOf="@+id/textShow" />

        <TextView
            android:id="@+id/ytLink1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/_1_yt_link"
            android:textColor="#1885F6"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/ytLink2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/_2_yt_link"
            android:textColor="#1885F6"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/ytLink1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ytLink1"
            app:layout_constraintTop_toBottomOf="@+id/ytLink1" />

        <TextView
            android:id="@+id/ytLink3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/_3_yt_link"
            android:textColor="#1885F6"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/ytLink2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ytLink2"
            app:layout_constraintTop_toBottomOf="@+id/ytLink2" />

        <TextView
            android:id="@+id/ytLink4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/_4_yt_link"
            android:textColor="#1885F6"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/ytLink3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ytLink3"
            app:layout_constraintTop_toBottomOf="@+id/ytLink3" />

        <Button
            android:id="@+id/buttonComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Mark as complete"
            app:layout_constraintEnd_toEndOf="@+id/ytLink4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ytLink4"
            app:layout_constraintTop_toBottomOf="@+id/ytLink4" />

        <Button
            android:id="@+id/buttonQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Take Quiz"
            app:layout_constraintEnd_toEndOf="@+id/buttonComplete"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/buttonComplete"
            app:layout_constraintTop_toBottomOf="@+id/buttonComplete" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>